# dissolve

./: .clang-format  .cmake-format.json  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CURRENT_BRANCH.md  CURRENT_BRANCH.txt  ChangeLog.md  DEVELOP_BRANCH.md  DEVELOP_BRANCH.txt  Dockerfile  Doxyfile  IN_TRANSIT.cpp  Makefile.am  NOTES  README  README.md  Recent.md  ReleaseNotes.md  TODO  changeversion  cliff.toml  commit  conanfile.txt  configure.ac  dissolve.kdev4  dissolve.nix  docker.nix  flake.nix  ignore_conan.patch  newInputExample.txt  oci.nix  shell.nix  snap.nix  windbuild.ps1
benchmark/: CMakeLists.txt  benchmarkConfig.h.in  benchmark_config.h.in  benchmarks.cpp
benchmark/Box/: benchmarks.cpp
benchmark/CalculateGR/: benchmarks.cpp
benchmark/array/: array_benchmark.cpp
benchmark/benchmark_files/: argon10k.txt  argon1k.txt  argon5k.txt  hexane1k.txt  hexane5k.txt  large_benchmark.txt  medium_benchmark.txt  small_benchmark.txt  water1k.txt
benchmark/benchmark_results/: MacbookPro_benchmark_Box.json  MacbookPro_benchmark_CalculateGR.json
benchmark/box/: box_benchmark.cpp
benchmark/calculate_gr/: calculate_gr_benchmark.cpp  test_problem.h
benchmark/classes/: CMakeLists.txt  box.cpp  region.cpp
benchmark/common/: argon.txt  argon10k.txt  argon1k.txt  hexane.txt  hexane5k.txt  problems.h  water.txt  water1k.txt
benchmark/energy/: energy_benchmark.cpp
benchmark/forces/: forces_benchmark.cpp
benchmark/histogram/: histogram_benchmark.cpp
benchmark/internal/: problems.h
benchmark/math/: CMakeLists.txt  array2d.cpp  array3d.cpp  fourier.cpp  histogram.cpp  interpolator.cpp  math_benchmark.cpp
benchmark/modules/: CMakeLists.txt  angle.cpp  energy.cpp  forces.cpp  gr.cpp  siteRDF.cpp  voxelDensity.cpp
benchmark/region/: region_benchmark.cpp
benchmark/siterdf/: siterdf_benchmark.cpp
examples/: CMakeLists.txt  package-examples
examples/argon/: CMakeLists.txt  argon.txt  clean  input.txt  liquid.xyz
examples/benchmark/: hexane100k.txt  hexane10k.txt  hexane1k.txt  peg10water100k.txt  peg1water10k.txt  water100k.txt  water10k.txt  water1M.txt
examples/benzene/: CMakeLists.txt  benzene-OPLSAA.txt  benzene-equil.txt  benzene.FIELD  benzene.txt  benzene.xyz  equilibrated.xyz  input.txt
examples/cu-btc/: CMakeLists.txt  input.txt
examples/emim-oac/: CMakeLists.txt  input.txt
examples/mussic_test/: CMakeLists.txt  input.txt
examples/old/: heptane.not
examples/post-processing/: CMakeLists.txt  input.txt
examples/silica/: sio2.txt
examples/silica_bulk/: CMakeLists.txt  input.txt
examples/species/: 1,3-propanediol.txt  CMakeLists.txt  ammonia.txt  ammonium.txt  benzene.txt  cycloheptane.txt  dimethylammonium.txt  dmim.xyz  h2so4.txt  heptane.txt  hso4-.txt  hydronium.txt  methanol.txt  naphthalene.txt  water.txt
examples/water/: input.txt  minimal.txt  single-potref.txt  water-1m.txt  water-epsr.txt  water-simulated.txt  water-spcfw.txt  water.txt
examples/water-simulated/: clean  simulated.txt  simulated.txt.state
examples/zsm-5/: MFI-2x2x2.akf  zsm-5.txt
src/: CMakeLists.txt  Makefile.am  dguided.cpp  dissolve-gui-qml.cpp  dissolve-gui.cpp  duq-gui.cpp  libduq.cpp  main.cpp  monitor.cpp  version.h
src/analyse/: CMakeLists.txt  Makefile.am  analyser.cpp  analyser.h  nodecontextstack.cpp  nodecontextstack.h  sitecontext.cpp  sitecontext.h  sitecontextstack.cpp  sitecontextstack.h  sitereference.cpp  sitereference.h
src/analyser/: CMakeLists.txt  dataExporter.h  dataNormaliser1D.cpp  dataNormaliser1D.h  dataNormaliser2D.cpp  dataNormaliser2D.h  dataNormaliser3D.cpp  dataNormaliser3D.h  dataNormaliserBase.h  dataOperator1D.cpp  dataOperator1D.h  dataOperator2D.cpp  dataOperator2D.h  dataOperator3D.cpp  dataOperator3D.h  dataOperatorBase.h  selectionProcessor.cpp  selectionProcessor.h  siteFilter.cpp  siteFilter.h  siteSelector.cpp  siteSelector.h  typeDefs.h
src/base/: CMakeLists.txt  Makefile.am  arguments.h  charstring.cpp  charstring.h  charstringlist.cpp  charstringlist.h  comms.cpp  comms.h  constants.h  data2d.cpp  data2d.h  dnchar.cpp  dnchar.h  doublesample.cpp  doublesample.h  dummyClass.h  dummyclass.h  element.cpp  element.h  enumOption.h  enumOptions.h  enumOptionsBase.cpp  enumOptionsBase.h  enumoption.cpp  enumoption.h  enumoptions.cpp  enumoptions.h  enumoptionsbase.cpp  enumoptionsbase.h  enumoptionslist.cpp  enumoptionslist.h  fileandformat.cpp  fileandformat.h  function.cpp  function.h  genericitem.cpp  genericitem.h  genericitembase.cpp  genericitembase.h  (+65 more)
src/classes/: CMakeLists.txt  Makefile.am  angle.cpp  angle.h  angleFunctions.cpp  angleFunctions.h  array3DIterator.cpp  array3DIterator.h  array3d_iter.cpp  array3d_iter.h  atom.cpp  atom.h  atomType.cpp  atomType.h  atomTypeData.cpp  atomTypeData.h  atomTypeMix.cpp  atomTypeMix.h  atomVector.cpp  atomVector.h  atomchangetoken.cpp  atomchangetoken.h  atomlock.cpp  atomlock.h  atomtype.cpp  atomtype.h  atomtypedata.cpp  atomtypedata.h  atomtypeindex.cpp  atomtypeindex.h  atomtypelist.cpp  atomtypelist.h  atomtypemix.cpp  atomtypemix.h  bead.cpp  bead.h  beadReference.cpp  beadReference.h  bond.cpp  bond.h  (+285 more)
src/cli/: main.cpp
src/data/: CMakeLists.txt  Makefile.am  atomicMasses.cpp  atomicMasses.h  atomicRadii.cpp  atomicRadii.h  atomicmass.cpp  atomicmass.h  atomicmasses.cpp  atomicmasses.h  atomicradii.cpp  atomicradii.h  atomicradius.cpp  atomicradius.h  elementColours.cpp  elementColours.h  elementcolours.cpp  elementcolours.h  elements.cpp  elements.h  ff.cpp  ff.h  ffangleterm.cpp  ffangleterm.h  ffatomtype.cpp  ffatomtype.h  ffbondterm.cpp  fflibrary.h  (+38 more)
tests/: .gitignore  CMakeLists.txt  checkall  clean  go  testData.h
trunk/: CMakeLists.txt  ChangeLog  Makefile.am  NOTES  commit  configure.ac  duq.kdev4
unit/: CMakeLists.txt  test_aragorn.cpp  test_box.cpp  test_cells.cpp  test_combination.cpp  test_derivatives.cpp  test_elements.cpp  test_enumoptions.cpp  test_expression.cpp  test_function1d.cpp  test_genericlist.cpp  test_neta.cpp  test_sampledvalues.cpp  test_xml_ff.cpp  test_zip.cpp
(+7913 files in other folders)
